tests/ui/iterators/collect-into-array.stderr
error[E0277]: an array of type `[u32; 10]` cannot be built directly from an iterator
  --> $DIR/collect-into-array.rs:2:39
   |
LL |     let whatever: [u32; 10] = (0..10).collect();
   |                                       ^^^^^^^ try collecting into a `Vec<{integer}>`, then using `.try_into()`
   |
   = help: the trait `FromIterator<{integer}>` is not implemented for `[u32; 10]`
note: required by a bound in `iter::range::<impl std::ops::Range<Idx>>::collect`
  --> $SRC_DIR/core/src/iter/range.rs:LL:COL
   = note: this error originates in the macro `iter_methods` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
